# galactic-bluetooth-audio

./: CMakeLists.txt  README.md  a2dp_sink_demo.cpp  btstack_audio_pico.cpp  fixed_fft.cpp  fixed_fft.hpp  pico_bt_example_common.cmake  picow_bt_example_common.cpp
.github/workflows/: cmake.yml
bluetooth/: bluetooth.cmake
bluetooth/config/: btstack_config.h
display/: displaybase.hpp
display/cosmic/: cosmic_unicorn.cmake  cosmic_unicorn.cpp  display.hpp
display/galactic/: display.hpp  galactic_unicorn.cmake  galactic_unicorn.cpp  galactic_unicorn.hpp
effect/: classic_fft.cmake  classic_fft.cpp  cover_art.cmake  cover_art.cpp  cover_jpg.h  effect.hpp  rainbow_fft.cmake  rainbow_fft.cpp
effect/lib/: fixed_fft.cpp  fixed_fft.hpp  rgb.hpp
galactic/: galactic_unicorn.cmake
src/: a2dp_sink.cpp  btstack_audio_pico.cpp  fixed_fft.cpp  fixed_fft.hpp  main.cpp
